VQ-718: Lifestyle Details Screen

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -1363,6 +1363,7 @@
         "account_number": "账号",
         "add_coinsurance_option": "添加共保选项",
         "agent": "代理人",
+        "alcohol": "酒精",
         "annual_premium": "年度保费",
         "back": "返回",
         "bank": "银行",
@@ -1372,6 +1373,8 @@
         "beneficiaries": "受益人",
         "beneficiary_details": "受益人详情",
         "benefit_proportion": "收益比例",
+        "bmi": "您的",
+        "body_mass_index": "身体质量指数 (您的)",
         "branch": "分行",
         "branch_required": "分行是必填项",
         "cancel" : "取消",
@@ -1382,6 +1385,7 @@
         "coinsurance": "共保",
         "coinsurer_share": "共保人份额",
         "completed": "已完成",
+        "consumption_question": "您是否消费或曾经消费以下任何物品",
         "contact": "联系",
         "contact_details": "联系详情",
         "continue": "继续",
@@ -1393,6 +1397,7 @@
         "delete": "删除",
         "dependent": "受抚养人",
         "dependents_details": "受抚养人详情",
+        "description": "描述",
         "distribution_channel": "分销渠道",
         "do_you_wish_to_have_the_benefit_of_escalation_option": "您希望享有递增选项的好处吗",
         "dob": "出生日期",
@@ -1402,6 +1407,7 @@
         "economic_sector": "经济部门",
         "edit": "编辑",
         "email_address": "电子邮箱地址",
+        "enter_country": "输入国家",
         "escalation": "递增",
         "escalation_rate": "递增率",
         "exempt": "免除",
@@ -1409,9 +1415,11 @@
         "female": "女性",
         "first_name": "名字",
         "first_name_required": "名字是必填项",
+        "frequency": "频率",
         "frequency_of_payment": "付款频率",
         "gender": "性别",
         "guardian_details": "监护人详情",
+        "height": "身高（厘米）",
         "iban": "国际银行账号",
         "incorrect_id_no_format": "身份证号码格式错误",
         "insurance_company": "保险公司",
@@ -1419,6 +1427,7 @@
         "last_name": "姓氏",
         "last_name_required": "姓氏是必填项",
         "leader_share": "主保险人份额",
+        "lifestyle_details": "生活方式详情",
         "loading": "加载中",
         "male": "男性",
         "marital_status": "婚姻状况",
@@ -1439,6 +1448,7 @@
         "option": "选项",
         "other_name": "其他名字",
         "percentage_benefit": "收益百分比",
+        "period_consumed": "消费时期",
         "phone_number": "电话号码",
         "physical_address": "实际地址",
         "pin_number": "密码",
@@ -1457,8 +1467,10 @@
         "proposal_question": "您的寿险提案是否曾被拒绝、延期、撤回或以特殊条款接受",
         "proposal_sign_date": "提案签署日期",
         "purpose_of_insurance": "保险目的",
+        "quantity": "数量",
         "relationship": "关系",
         "relationship_trustee": "关系（受托人）",
+        "risky_occupation": "您的职业是否与任何特定的危险相关，或者您是否从事任何可能危险或涉及额外风险的活动、运动或爱好",
         "save":"保存",
         "save_and_continue": "保存并继续",
         "select_bank": "选择银行",
@@ -1494,10 +1506,13 @@
         "term": "期限",
         "title": "称谓",
         "type_of_employment": "就业类型",
+        "tobacco": "烟草",
         "town": "城镇",
+        "travel": "过去6个月内, 您是否曾离开尼日利亚旅行，或近期有此计划",
         "type": "类型",
         "upload_later": "稍后上传",
         "wealth_aml_details": "财富反洗钱详情",
+        "weight": "体重（公斤",
         "with_effect_from": "生效日期",
         "with_effect_to": "终止日期",
         "yes": "是"
