--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1364,6 +1364,7 @@
         "account_number": "Kontonummer",
         "add_coinsurance_option": "Mitversicherung hinzufügen",
         "agent": "Agent",
+        "alcohol": "Alkohol",
         "annual_premium": "Jahresprämie",
         "back": "Zurück",
         "bank": "Bank",
@@ -1373,6 +1374,8 @@
         "beneficiaries": "Begünstigte",
         "beneficiary_details": "Begünstigtendetails",
         "benefit_proportion": "Vorteilsanteil",
+        "bmi": "Ihr BMI",
+		    "body_mass_index": "Körpermassenindex (BMI)",
         "branch": "Filiale",
         "branch_required": "Filiale ist erforderlich",
         "cancel" : "Abbrechen",
@@ -1383,6 +1386,7 @@
         "coinsurance": "Mitversicherung",
         "coinsurer_share": "Anteil des Mitversicherers",
         "completed": "Abgeschlossen",
+        "consumption_question": "Konsumieren oder haben Sie eines der folgenden konsumiert",
         "contact": "Kontakt",
         "contact_details": "Kontaktdaten",
         "continue": "Weiter",
@@ -1394,6 +1398,7 @@
         "delete": "Löschen",
         "dependent": "Abhängige",
         "dependents_details": "Angaben zu den Abhängigen",
+        "description": "Beschreibung",
         "distribution_channel": "Vertriebskanal",
         "do_you_wish_to_have_the_benefit_of_escalation_option": "Möchten Sie von der Eskalationsoption profitieren",
         "dob": "Geburtsdatum",
@@ -1403,6 +1408,7 @@
         "economic_sector": "Wirtschaftssektor",
         "edit": "Bearbeiten",
         "email_address": "E-Mail-Adresse",
+        "enter_country": "Land eingeben",
         "escalation": "Eskalation",
         "escalation_rate": "Eskalationsrate",
         "exempt": "Befreit",
@@ -1410,9 +1416,11 @@
         "female": "Weiblich",
         "first_name": "Vorname",
         "first_name_required": "Vorname ist erforderlich",
+        "frequency": "Häufigkeit",
         "frequency_of_payment": "Zahlungshäufigkeit",
         "gender": "Geschlecht",
         "guardian_details": "Angaben zum Vormund",
+        "height": "Größe (cm)",
         "iban": "IBAN",
         "incorrect_id_no_format": "Falsches Ausweisnummernformat",
         "insurance_company": "Versicherungsgesellschaft",
@@ -1420,6 +1428,7 @@
         "last_name": "Nachname",
         "last_name_required": "Nachname ist erforderlich",
         "leader_share": "Anteil des Hauptversicherers",
+        "lifestyle_details": "Lebensstil-Details",
         "loading": "Wird geladen",
         "male": "Männlich",
         "marital_status": "Familienstand",
@@ -1440,6 +1449,7 @@
         "option": "Option",
         "other_name": "Weiterer Name",
         "percentage_benefit": "Prozentualer Nutzen",
+        "period_consumed": "Konsumdauer",
         "phone_number": "Telefonnummer",
         "physical_address": "Physische Adresse",
         "pin_number": "PIN-Nummer",
@@ -1458,8 +1468,10 @@
         "proposal_question": "Wurde jemals ein Vorschlag für Ihre Lebensversicherung abgelehnt, verschoben, zurückgezogen oder zu besonderen Bedingungen akzeptiert",
         "proposal_sign_date": "Unterschriftsdatum des Antrags",
         "purpose_of_insurance": "Zweck der Versicherung",
+        "quantity": "Menge",
         "relationship": "Beziehung",
         "relationship_trustee": "Beziehung (Treuhänder)",
+        "risky_occupation": "Ist Ihr Beruf mit einer spezifischen Gefahr verbunden oder nehmen Sie an Aktivitäten, Sportarten oder Hobbys teil, die gefährlich sein oder ein zusätzliches Risiko darstellen könnten",
         "save":"Speichern",
         "save_and_continue": "Speichern und fortfahren",
         "select_bank": "Bank auswählen",
@@ -1494,11 +1506,14 @@
         "sum_assured": "Versicherungssumme",
         "term": "Laufzeit",
         "title": "Titel",
+        "tobacco": "Tabak",
         "type_of_employment": "Beschäftigungsart",
         "town": "Stadt",
+        "travel": "Haben Sie in den letzten 6 Monaten Nigeria verlassen oder planen Sie dies in naher Zukunft",
         "type": "Typ",
         "upload_later": "Später hochladen",
         "wealth_aml_details": "Vermögens-AML-Details",
+        "weight": "Gewicht (kg)",
         "with_effect_from": "Gültig ab",
         "with_effect_to": "Gültig bis",
         "yes": "Ja"
