--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1438,6 +1438,7 @@
       "quotations": {
         "account_number": "Account No.",
         "add_coinsurance_option": "Add Coinsurance Option",
+        "alcohol": "Alcohol",
         "annual_premium": "Annual Premium",
         "back": "Back",
         "agent": "Agent",
@@ -1448,6 +1449,8 @@
         "beneficiaries": "Beneficiaries",
         "beneficiary_details": "Beneficiary Details",
         "benefit_proportion": "Benefit Proportion",
+        "bmi": "Your BMI",
+        "body_mass_index": "Body Mass Index (BMI)",
         "branch": "Branch",
         "branch_required": "Branch is required",
         "cancel" : "Cancel",
@@ -1458,6 +1461,7 @@
         "coinsurance": "Coinsurance",
         "coinsurer_share": "Coinsurer Share",
         "completed": "Completed",
+        "consumption_question": "Do you consume or have consumed any of the following",
         "contact": "Contact",
         "contact_details": "Contact Details",
         "continue": "Continue",
@@ -1469,6 +1473,7 @@
         "delete": "Delete",
         "dependent": "Dependent(s)",
         "dependents_details": "Dependents Details",
+        "description": "Description",
         "distribution_channel": "Distribution Channel",
         "do_you_wish_to_have_the_benefit_of_escalation_option": "Do you wish to have the benefit of escalation option",
         "dob": "Date of Birth",
@@ -1478,6 +1483,7 @@
         "economic_sector": "Economic Sector",
         "edit": "Edit",
         "email_address": "Email Address",
+        "enter_country": "Enter Country",
         "escalation": "Escalation",
         "escalation_rate": "Escalation Rate",
         "exempt": "Exempt",
@@ -1485,9 +1491,11 @@
         "female": "Female",
         "first_name": "First Name",
         "first_name_required": "First Name is required",
+        "frequency": "Frequency",
         "frequency_of_payment": "Frequency of Payment",
         "gender": "Gender",
         "guardian_details": "Guardian Details",
+        "height" : "Height (cm)",
         "iban": "IBAN",
         "incorrect_id_no_format": "Incorrect ID No Format",
         "insurance_company": "Insurance Company",
@@ -1495,6 +1503,7 @@
         "last_name": "Last Name",
         "last_name_required": "Last Name is required",
         "leader_share": "Leader Share",
+        "lifestyle_details": "Lifestyle Details",
         "loading": "Loading",
         "male": "Male",
         "marital_status": "Marital Status",
@@ -1514,6 +1523,7 @@
         "occupation": "Occupation",
         "option": "Option",
         "other_name": "Other Name",
+        "period_consumed": "Period Consumed",
         "percentage_benefit": "Percentage Benefit",
         "phone_number": "Phone Number",
         "physical_address": "Physical Address",
@@ -1533,8 +1543,10 @@
         "proposal_question": "Has any proposal on your life ever been declined, deferred, withdrawn or accepted on special terms",
         "proposal_sign_date": "Proposal Sign Date",
         "purpose_of_insurance": "Purpose of Insurance",
+        "quantity": "Quantity",
         "relationship": "Relationship",
         "relationship_trustee": "Relationship (Trustee)",
+        "risky_occupation": "Is your occupation associated with any specific hazard or do you take part in any activity, sports, hobbies that may be dangerous or involve extra risk",
         "save": "Save",
         "save_and_continue": "Save and Continue",
         "select_bank": "Select Bank",
@@ -1569,11 +1581,14 @@
         "sum_assured": "Sum Assured",
         "term": "Term",
         "title": "Title",
+        "tobacco": "Tobacco",
+        "travel": "Have you travelled outside Nigeria for the past 6 months or intend to in the near future",
         "type": "Type",
         "type_of_employment": "Type of Employment",
         "town": "Town",
         "upload_later": "Upload Later",
         "wealth_aml_details": "Wealth AML details",
+        "weight": "Weight (kg)",
         "with_effect_from": "With Effect From",
         "with_effect_to": "With Effect To",
         "yes": "Yes"
