--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1386,6 +1386,7 @@
         "account_number": "Número de cuenta",
         "add_coinsurance_option": "Agregar opción de coaseguro",
         "agent": "Agente",
+        "alcohol": "Alcohol",
         "annual_premium": "Prima anual",
         "back": "Atrás",
         "bank": "Banco",
@@ -1395,6 +1396,8 @@
         "beneficiaries": "Beneficiarios",
         "beneficiary_details": "Proporción del beneficio",
         "benefit_proportion": "Benefit Proportion",
+        "bmi": "Tu IMC",
+		    "body_mass_index": "Índice de Masa Corporal (IMC)",
         "branch": "Sucursal",
         "branch_required": "La sucursal es obligatoria",
         "cancel" : "Cancelar",
@@ -1405,6 +1408,7 @@
         "coinsurance": "Coaseguro",
         "coinsurer_share": "Participación del coasegurador",
         "completed": "Completado",
+        "consumption_question": "¿Consume o ha consumido alguno de los siguientes",
         "contact": "Contacto",
         "contact_details": "Detalles de contacto",
         "continue": "Continuar",
@@ -1416,6 +1420,7 @@
         "delete": "Eliminar",
         "dependent": "Dependiente",
         "dependents_details": "Detalles de los dependientes",
+        "description": "Descripción",
         "distribution_channel": "Canal de distribución",
         "do_you_wish_to_have_the_benefit_of_escalation_option": "¿Desea tener el beneficio de la opción de escalación?",
         "dob": "Fecha de nacimiento",
@@ -1425,6 +1430,7 @@
         "economic_sector": "Sector económico",
         "edit": "Editar",
         "email_address": "Dirección de correo electrónico",
+        "enter_country": "Ingrese el país",
         "escalation": "Escalación",
         "escalation_rate": "Tasa de escalación",
         "exempt": "Exento",
@@ -1432,9 +1438,11 @@
         "female": "Femenino",
         "first_name": "Nombre",
         "first_name_required": "El nombre es obligatorio",
+        "frequency": "Frecuencia",
         "frequency_of_payment": "Frecuencia de pago",
         "gender": "Género",
         "guardian_details": "Detalles del tutor",
+        "height": "Altura (cm)",
         "iban": "IBAN",
         "incorrect_id_no_format": "Formato incorrecto del número de identificación",
         "insurance_company": "Compañía de seguros",
@@ -1442,6 +1450,7 @@
         "last_name": "Apellido",
         "last_name_required": "El apellido es obligatorio",
         "leader_share": "Participación del líder",
+        "lifestyle_details": "Detalles del estilo de vida",
         "loading": "Cargando",
         "male": "Masculino",
         "marital_status": "Estado civil",
@@ -1462,6 +1471,7 @@
         "option": "Opción",
         "other_name": "Otro Nombre",
         "percentage_benefit": "Porcentaje de Beneficio",
+        "period_consumed": "Período consumido",
         "phone_number": "Número de teléfono",
         "physical_address": "Dirección física",
         "pin_number": "Número PIN",
@@ -1480,8 +1490,10 @@
         "proposal_question": "¿Alguna vez se ha rechazado, aplazado, retirado o aceptado bajo condiciones especiales alguna propuesta de seguro sobre su vida",
         "proposal_sign_date": "Fecha de firma de la propuesta",
         "purpose_of_insurance": "Propósito del seguro",
+        "quantity": "Cantidad",
         "relationship": "Relación",
         "relationship_trustee": "Relación (Fideicomisario)",
+        "risky_occupation": "¿Su ocupación está asociada con algún peligro específico o participa en actividades, deportes o pasatiempos que puedan ser peligrosos o implicar riesgos adicionales",
         "save":"Guardar",
         "save_and_continue": "Guardar y continuar",
         "select_bank": "Seleccionar banco",
@@ -1516,11 +1528,14 @@
         "sum_assured": "Suma asegurada",
         "term": "Término",
         "title": "Título",
+        "tobacco": "Tabaco",
+        "travel": "¿Ha viajado fuera de Nigeria en los últimos 6 meses o planea hacerlo en un futuro cercano",
         "type": "Tipo",
         "type_of_employment": "Tipo de empleo",
         "town": "Ciudad",
         "upload_later": "Subir más tarde",
         "wealth_aml_details": "Detalles AML sobre patrimonio",
+        "weight": "Peso (kg)",
         "with_effect_from": "Con efecto desde",
         "with_effect_to": "Con efecto hasta",
         "yes": "Sí"
