--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1390,6 +1390,7 @@
         "account_number": "Numéro de compte",
         "add_coinsurance_option": "Ajouter une option de coassurance",
         "agent": "Agent",
+        "alcohol": "Alcool",
         "annual_premium": "Prime annuelle",
         "back": "Retour",
         "bank": "Banque",
@@ -1399,6 +1400,8 @@
         "beneficiaries": "Bénéficiaires",
         "beneficiary_details": "Détails du bénéficiaire",
         "benefit_proportion": "Proportion des bénéfices",
+        "bmi": "Votre IMC",
+		    "body_mass_index": "Indice de Masse Corporelle (IMC)",
         "branch": "Agence",
         "branch_required": "L'agence est requise",
         "cancel" : "Annuler",
@@ -1409,6 +1412,7 @@
         "coinsurance": "Coassurance",
         "coinsurer_share": "Part du coassureur",
         "completed": "Terminé",
+        "consumption_question": "Consommez-vous ou avez-vous consommé l'un des éléments suivants",
         "contact": "Contact",
         "contact_details": "Détails de contact",
         "continue": "Continuer",
@@ -1421,6 +1425,7 @@
         "delete": "Supprimer",
         "dependent": "Personne(s) à charge",
         "dependents_details": "Détails des personnes à charge",
+        "description": "Description",
         "do_you_wish_to_have_the_benefit_of_escalation_option": "Souhaitez-vous bénéficier de l'option d'escalade",
         "dob": "Date de naissance",
         "dob_required": "La date de naissance est requise",
@@ -1429,6 +1434,7 @@
         "economic_sector": "Secteur économique",
         "edit": "Modifier",
         "email_address": "Adresse e-mail",
+        "enter_country": "Entrez le pays",
         "escalation": "Escalade",
         "escalation_rate": "Taux d'escalade",
         "exempt": "Exempté",
@@ -1436,9 +1442,11 @@
         "female": "Femme",
         "first_name": "Prénom",
         "first_name_required": "Le prénom est requis",
+        "frequency": "Fréquence",
         "frequency_of_payment": "Fréquence de paiement",
         "gender": "Genre",
         "guardian_details": "Détails du tuteur",
+        "height": "Taille (cm)",
         "iban": "IBAN",
         "incorrect_id_no_format": "Format du numéro d'identification incorrect",
         "insurance_company": "Compagnie d'assurance",
@@ -1446,6 +1454,7 @@
         "last_name": "Nom de famille",
         "last_name_required": "Le nom de famille est requis",
         "leader_share": "Part du leader",
+        "lifestyle_details": "Détails du mode de vie",
         "loading": "Chargement",
         "male": "Homme",
         "marital_status": "État civil",
@@ -1466,6 +1475,7 @@
         "other_name": "Autre Nom",
         "option": "Option",
         "percentage_benefit": "Pourcentage de bénéfice",
+        "period_consumed": "Période de consommation",
         "phone_number": "Numéro de téléphone",
         "physical_address": "Adresse physique",
         "pin_number": "Numéro PIN",
@@ -1484,8 +1494,10 @@
         "proposal_question": "Une proposition d'assurance sur votre vie a-t-elle déjà été refusée, différée, retirée ou acceptée à des conditions spéciales",
         "proposal_sign_date": "Date de signature de la proposition",
         "purpose_of_insurance": "Objet de l'assurance",
+        "quantity": "Quantité",
         "relationship": "Relation",
         "relationship_trustee": "Relation (Fiduciaire)",
+        "risky_occupation": "Votre profession est-elle associée à un danger spécifique ou participez-vous à une activité, un sport, un passe-temps qui pourrait être dangereux ou impliquer un risque supplémentaire",
         "save":"Enregistrer",
         "save_and_continue": "Enregistrer et continuer",
         "select_bank": "Sélectionner la banque",
@@ -1520,11 +1532,14 @@
         "sum_assured": "Somme assurée",
         "term": "Durée",
         "title": "Titre",
+        "tobacco": "Tabac",
+        "travel": "Avez-vous voyagé hors du Nigéria au cours des 6 derniers mois ou envisagez-vous de le faire prochainement",
         "type": "Type",
         "type_of_employment": "Type d'emploi",
         "town": "Ville",
         "upload_later": "Télécharger plus tard",
         "wealth_aml_details": "Détails AML sur la richesse",
+        "weight": "Poids (kg)",
         "with_effect_from": "En vigueur à partir du",
         "with_effect_to": "En vigueur jusqu'au",
         "yes": "Oui"
