--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -1365,6 +1365,7 @@
         "account_number": "Nambari ya Akaunti",
         "add_coinsurance_option": "Ongeza Chaguo la Bima ya Pamoja",
         "agent": "Wakala",
+        "alcohol": "Pombe",
         "annual_premium": "Ada ya Bima ya Mwaka",
         "back": "Rudi",
         "bank": "Benki",
@@ -1374,6 +1375,8 @@
         "beneficiaries": "Wafaidika",
         "beneficiary_details": "Maelezo ya Mfaidika",
         "benefit_proportion": "Sehemu ya Manufaa",
+        "bmi": "BMI Yako",
+		    "body_mass_index": "Kipimo cha Uzito wa Mwili (BMI)",
         "branch": "Tawi",
         "branch_required": "Tawi linahitajika",
         "cancel" : "Ghairi",
@@ -1384,6 +1387,7 @@
         "coinsurance": "Bima ya Pamoja",
         "coinsurer_share": "Sehemu ya Mshirika wa Bima",
         "completed": "Imekamilika",
+        "consumption_question": "Je, unatumia au umewahi kutumia mojawapo ya yafuatayo",
         "contact": "Mawasiliano",
         "contact_details": "Maelezo ya Mawasiliano",
         "continue": "Endelea",
@@ -1395,6 +1399,7 @@
         "delete": "Futa",
         "dependents_details": "Maelezo ya Wategemezi",
         "dependent": "Wategemezi",
+        "description": "Maelezo",
         "distribution_channel": "Njia ya Usambazaji",
         "do_you_wish_to_have_the_benefit_of_escalation_option": "Je, unataka kufaidika na chaguo la ongezeko?",
         "dob": "Tarehe ya Kuzaliwa",
@@ -1404,6 +1409,7 @@
         "economic_sector": "Sekta ya Uchumi",
         "edit": "Hariri",
         "email_address": "Barua Pepe",
+        "enter_country": "Ingiza Nchi",
         "escalation": "Ongezeko",
         "escalation_rate": "Kiwango cha Ongezeko",
         "exempt": "Imeondolewa",
@@ -1411,9 +1417,11 @@
         "female": "Mwanamke",
         "first_name": "Jina la Kwanza",
         "first_name_required": "Jina la kwanza linahitajika",
+        "frequency": "Mara kwa mara",
         "frequency_of_payment": "Mara ya Malipo",
         "gender": "Jinsia",
         "guardian_details": "Maelezo ya Mlezi",
+        "height": "Urefu (cm)",
         "iban": "IBAN",
         "incorrect_id_no_format": "Muundo wa Nambari ya Kitambulisho sio sahihi",
         "insurance_company": "Kampuni ya Bima",
@@ -1421,6 +1429,7 @@
         "last_name": "Jina la Mwisho",
         "last_name_required": "Jina la mwisho linahitajika",
         "leader_share": "Sehemu ya Kiongozi",
+        "lifestyle_details": "Maelezo ya Mtindo wa Maisha",
         "loading": "Inapakia",
         "male": "Mwanaume",
         "marital_status": "Hali ya Ndoa",
@@ -1441,6 +1450,7 @@
         "option": "Chaguo",
         "other_name": "Jina Lingine",
         "percentage_benefit": "Asilimia ya Manufaa",
+        "period_consumed": "Kipindi cha Matumizi",
         "phone_number": "Nambari ya Simu",
         "physical_address": "Anuani ya Makazi",
         "pin_number": "Nambari ya PIN",
@@ -1459,8 +1469,10 @@
         "proposal_question": "Je, pendekezo lolote juu ya maisha yako limewahi kukataliwa, kucheleweshwa, kuondolewa au kukubaliwa kwa masharti maalum",
         "proposal_sign_date": "Tarehe ya Kusaini Pendekezo",
         "purpose_of_insurance": "Kusudi la Bima",
+        "quantity": "Kiasi",
         "relationship": "Uhusiano",
         "relationship_trustee": "Uhusiano (Mdhamini)",
+        "risky_occupation": "Je, kazi yako inahusiana na hatari yoyote maalum au unashiriki katika shughuli, michezo, au burudani zinazoweza kuwa hatari au kuhusisha hatari za ziada",
         "save":"Hifadhi",
         "save_and_continue": "Hifadhi na Endelea",
         "select_bank": "Chagua Benki",
@@ -1495,11 +1507,14 @@
         "sum_assured": "Jumla Iliyohakikishwa",
         "term": "Kipindi",
         "title": "Kichwa",
+        "tobacco": "Tumbaku",
+        "travel": "Je, umesafiri nje ya Nigeria kwa miezi 6 iliyopita au unakusudia kufanya hivyo hivi karibuni",
         "type": "Aina",
         "type_of_employment": "Aina ya Ajira",
         "town": "Mji",
         "upload_later": "Pakia Baadaye",
         "wealth_aml_details": "Maelezo ya AML ya Mali",
+        "weight": "Uzito (kg)",
         "with_effect_from": "Kuanzia Tarehe",
         "with_effect_to": "Hadi Tarehe",
         "yes": "Ndio"
