VQ-3534/Coverage dets unit tests and multilingual

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1651,7 +1651,70 @@
           "commission_cannot_be_greater_than_100": "La commission ne peut pas être supérieure à 100 %",
           "continue": "Continuer"
         },
-        "coverage": {},
+        "coverage": {
+          "cover_details": "Détails de la couverture",
+          "capture_detailed_cover_type_details": "Capturer les détails détaillés du type de couverture",
+          "cover_types": "Types de couverture",
+          "override_premiums": "Remplacer les primes",
+          "capture_cover_type_details": "Capturer les détails du type de couverture",
+          "aggregate_main_cover": "Types de couverture",
+          "aggregate_override_premiums": "Masque de primes",
+          "category": "Catégorie",
+          "multiples_of_earnings": "Multiples des gains",
+          "average_earning_per_member": "Revenu moyen par membre",
+          "no_of_members": "Nombre de membres",
+          "average_anb": "ANB moyen",
+          "aggregate_select_rate": "Taux de sélection",
+          "cover_type": "Type de couverture",
+          "select_rate": "Taux de sélection",
+          "premium_mask": "Masque de primes",
+          "rate": "Taux",
+          "rate_division_factor": "Facteur de division du taux",
+          "action": "Action",
+          "edit": "Modifier",
+          "delete": "Supprimer",
+          "category_details": "Détails de la catégorie",
+          "description": "Description",
+          "short_description": "Description courte",
+          "capture_category_details": "Capturer les détails de la catégorie",
+          "add_members": "Ajouter des membres",
+          "download_member_upload_template": "Télécharger le modèle d'importation de membres",
+          "surname": "Nom de famille",
+          "other_names": "Autres prénoms",
+          "date_of_birth": "Date de naissance",
+          "gender": "Sexe",
+          "male": "Homme",
+          "female": "Femme",
+          "payroll_number": "Numéro de paie/numéro de membre",
+          "main_member_number": "Numéro du membre principal",
+          "monthly_earning": "Revenu mensuel",
+          "joining_date": "Date d'adhésion",
+          "occupation": "Profession",
+          "dependant_type": "Type de dépendant",
+          "member_details": "Détails du membre",
+          "submit": "Soumettre",
+          "close": "Fermer",
+          "back": "Retour",
+          "compute": "Calculer",
+          "no_record_captured_click_on_icon_to_add": "Aucun enregistrement capturé. Cliquez sur l'icône + pour ajouter.",
+          "filter_by": "Filtrer par",
+          "greater_than_equals": "supérieur ou égal...",
+          "enter_value": "Entrer la valeur",
+          "search": "Rechercher...",
+          "payroll_member_no": "Numéro de paie/numéro de membre",
+          "monthly_earnings": "Revenus mensuels",
+          "save": "Sauvegarder",
+          "percentage_of_main_sa": "% du SA principal/annuel",
+          "premium_rate": "Taux de prime",
+          "number_of_members": "Nombre de membres",
+          "total_member_earnings": "Total des revenus des membres",
+          "override_premium": "Prime de remplacement",
+          "sum_assured": "Capital assuré",
+          "here": "ici",
+          "payroll_or_member_number": "Numéro de paie/numéro de membre",
+          "other_name": "Autre nom",
+          "choose_file": "Choisir un fichier"
+        },
         "summary": {}
       },
       "agent_portal": {
