--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1647,7 +1647,70 @@
           "commission_cannot_be_greater_than_100": "La comisión no puede ser superior al 100 %",
           "continue": "Continuar"
         },
-        "coverage": {},
+        "coverage": {
+          "cover_details": "Detalles de la cobertura",
+          "capture_detailed_cover_type_details": "Capturar detalles detallados del tipo de cobertura",
+          "cover_types": "Tipos de cobertura",
+          "override_premiums": "Sobrescribir primas",
+          "capture_cover_type_details": "Capturar detalles del tipo de cobertura",
+          "aggregate_main_cover": "Tipos de cobertura",
+          "aggregate_override_premiums": "Máscara de primas",
+          "category": "Categoría",
+          "multiples_of_earnings": "Múltiplos de ingresos",
+          "average_earning_per_member": "Ingreso promedio por miembro",
+          "no_of_members": "Número de miembros",
+          "average_anb": "ANB promedio",
+          "aggregate_select_rate": "Tasa de selección",
+          "cover_type": "Tipo de cobertura",
+          "select_rate": "Tasa de selección",
+          "premium_mask": "Máscara de primas",
+          "rate": "Tasa",
+          "rate_division_factor": "Factor de división de la tasa",
+          "action": "Acción",
+          "edit": "Editar",
+          "delete": "Eliminar",
+          "category_details": "Detalles de la categoría",
+          "description": "Descripción",
+          "short_description": "Descripción corta",
+          "capture_category_details": "Capturar detalles de la categoría",
+          "add_members": "Agregar miembros",
+          "download_member_upload_template": "Descargar plantilla de carga de miembros",
+          "surname": "Apellido",
+          "other_names": "Otros nombres",
+          "date_of_birth": "Fecha de nacimiento",
+          "gender": "Género",
+          "male": "Hombre",
+          "female": "Mujer",
+          "payroll_number": "Número de nómina/número de miembro",
+          "main_member_number": "Número del miembro principal",
+          "monthly_earning": "Ingreso mensual",
+          "joining_date": "Fecha de ingreso",
+          "occupation": "Ocupación",
+          "dependant_type": "Tipo de dependiente",
+          "member_details": "Detalles del miembro",
+          "submit": "Enviar",
+          "close": "Cerrar",
+          "back": "Volver",
+          "compute": "Calcular",
+          "no_record_captured_click_on_icon_to_add": "No se ha capturado ningún registro. Haga clic en el icono + para agregar.",
+          "filter_by": "Filtrar por",
+          "greater_than_equals": "mayor o igual...",
+          "enter_value": "Ingresar valor",
+          "search": "Buscar...",
+          "payroll_member_no": "Número de nómina/número de miembro",
+          "monthly_earnings": "Ingresos mensuales",
+          "save": "Guardar",
+          "percentage_of_main_sa": "% del SA principal/anual",
+          "premium_rate": "Tasa de prima",
+          "number_of_members": "Número de miembros",
+          "total_member_earnings": "Ingresos totales de los miembros",
+          "override_premium": "Prima de reemplazo",
+          "sum_assured": "Suma asegurada",
+          "here": "aquí",
+          "payroll_or_member_number": "Número de nómina/número de miembro",
+          "other_name": "Otro nombre",
+          "choose_file": "Elegir archivo"
+        },
         "summary": {}
       },
       "agent_portal": {
